test/distributions/block/duplicateTargetLocales.noallow.good
duplicateTargetLocales.chpl:9: error: halt reached - BlockDist does not allow duplicate targetLocales
